tests/semantic_cases/invalid/qualified_variable_reference_unsupported.ob0
(* INVALID: qualified variable references are currently rejected by semantic analysis *)
MODULE Main;
IMPORT B := ModuleB;
VAR x: INTEGER;
BEGIN
  x := B.value
END Main.
